S2 Intro Screen and loading states; Added full publication date if avavilable;
