# python/openapi.json
@@ -16,9 +16,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "full_name"
-        ],
+        "required": ["full_name"],
         "title": "Author",
         "type": "object"
       },
@@ -30,9 +28,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "file"
-        ],
+        "required": ["file"],
         "title": "Body_create_file_api_fs__project_id___filepath__put",
         "type": "object"
       },
@@ -50,9 +46,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "text"
-        ],
+        "required": ["text"],
         "title": "ChatRequest",
         "type": "object"
       },
@@ -71,11 +65,7 @@
             "$ref": "#/components/schemas/ResponseStatus"
           }
         },
-        "required": [
-          "status",
-          "message",
-          "choices"
-        ],
+        "required": ["status", "message", "choices"],
         "title": "ChatResponse",
         "type": "object"
       },
@@ -88,10 +78,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "index",
-          "text"
-        ],
+        "required": ["index", "text"],
         "title": "ChatResponseChoice",
         "type": "object"
       },
@@ -112,9 +99,7 @@
             "type": "array"
           }
         },
-        "required": [
-          "text"
-        ],
+        "required": ["text"],
         "title": "Chunk",
         "type": "object"
       },
@@ -131,9 +116,7 @@
             "type": "array"
           }
         },
-        "required": [
-          "reference_ids"
-        ],
+        "required": ["reference_ids"],
         "title": "DeleteRequest",
         "type": "object"
       },
@@ -146,10 +129,7 @@
             "$ref": "#/components/schemas/ResponseStatus"
           }
         },
-        "required": [
-          "status",
-          "message"
-        ],
+        "required": ["status", "message"],
         "title": "DeleteStatusResponse",
         "type": "object"
       },
@@ -165,11 +145,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "name",
-          "path",
-          "file_extension"
-        ],
+        "required": ["name", "path", "file_extension"],
         "title": "FileEntry",
         "type": "object"
       },
@@ -266,10 +242,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "name",
-          "path"
-        ],
+        "required": ["name", "path"],
         "title": "FolderEntry",
         "type": "object"
       },
@@ -286,7 +259,7 @@
         "title": "HTTPValidationError",
         "type": "object"
       },
-      "IngestMetadataRequest": {
+      "IngestPdfUrlRequest": {
         "properties": {
           "metadata": {
             "$ref": "#/components/schemas/ReferenceCreate"
@@ -297,24 +270,19 @@
                 "$ref": "#/components/schemas/IngestRequestType"
               }
             ],
-            "default": "metadata"
+            "default": "pdf"
           },
           "url": {
             "type": "string"
           }
         },
-        "required": [
-          "metadata"
-        ],
-        "title": "IngestMetadataRequest",
+        "required": ["url", "metadata"],
+        "title": "IngestPdfUrlRequest",
         "type": "object"
       },
       "IngestRequestType": {
         "description": "An enumeration.",
-        "enum": [
-          "uploads",
-          "metadata"
-        ],
+        "enum": ["uploads", "pdf"],
         "title": "IngestRequestType",
         "type": "string"
       },
@@ -330,20 +298,13 @@
             "type": "array"
           }
         },
-        "required": [
-          "project_name",
-          "references"
-        ],
+        "required": ["project_name", "references"],
         "title": "IngestResponse",
         "type": "object"
       },
       "IngestStatus": {
         "description": "An enumeration.",
-        "enum": [
-          "processing",
-          "failure",
-          "complete"
-        ],
+        "enum": ["processing", "failure", "complete"],
         "title": "IngestStatus",
         "type": "string"
       },
@@ -363,10 +324,7 @@
       },
       "ModelProvider": {
         "description": "An enumeration.",
-        "enum": [
-          "openai",
-          "ollama"
-        ],
+        "enum": ["openai", "ollama"],
         "title": "ModelProvider",
         "type": "string"
       },
@@ -379,10 +337,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "id",
-          "name"
-        ],
+        "required": ["id", "name"],
         "title": "ProjectBase",
         "type": "object"
       },
@@ -395,9 +350,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "project_name"
-        ],
+        "required": ["project_name"],
         "title": "ProjectCreateRequest",
         "type": "object"
       },
@@ -410,10 +363,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "id",
-          "name"
-        ],
+        "required": ["id", "name"],
         "title": "ProjectDetailsResponse",
         "type": "object"
       },
@@ -433,9 +383,7 @@
             "type": "array"
           }
         },
-        "required": [
-          "contents"
-        ],
+        "required": ["contents"],
         "title": "ProjectFileTreeResponse",
         "type": "object"
       },
@@ -448,9 +396,7 @@
             "type": "array"
           }
         },
-        "required": [
-          "projects"
-        ],
+        "required": ["projects"],
         "title": "ProjectListResponse",
         "type": "object"
       },
@@ -483,9 +429,6 @@
           "doi": {
             "type": "string"
           },
-          "filepath": {
-            "type": "string"
-          },
           "id": {
             "type": "string"
           },
@@ -507,10 +450,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "id",
-          "status"
-        ],
+        "required": ["id", "source_filename", "status"],
         "title": "Reference",
         "type": "object"
       },
@@ -523,13 +463,6 @@
             "default": [],
             "items": {
               "$ref": "#/components/schemas/Author"
-            },
-            "type": "array"
-          },
-          "chunks": {
-            "default": [],
-            "items": {
-              "$ref": "#/components/schemas/Chunk"
             },
             "type": "array"
           },
@@ -557,9 +490,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "title"
-        ],
+        "required": ["source_filename"],
         "title": "ReferenceCreate",
         "type": "object"
       },
@@ -570,18 +501,13 @@
             "type": "object"
           }
         },
-        "required": [
-          "data"
-        ],
+        "required": ["data"],
         "title": "ReferencePatch",
         "type": "object"
       },
       "ResponseStatus": {
         "description": "An enumeration.",
-        "enum": [
-          "ok",
-          "error"
-        ],
+        "enum": ["ok", "error"],
         "title": "ResponseStatus",
         "type": "string"
       },
@@ -594,20 +520,13 @@
             "type": "string"
           }
         },
-        "required": [
-          "index",
-          "text"
-        ],
+        "required": ["index", "text"],
         "title": "RewriteChoice",
         "type": "object"
       },
       "RewriteMannerType": {
         "description": "An enumeration.",
-        "enum": [
-          "concise",
-          "elaborate",
-          "scholarly"
-        ],
+        "enum": ["concise", "elaborate", "scholarly"],
         "title": "RewriteMannerType",
         "type": "string"
       },
@@ -633,9 +552,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "text"
-        ],
+        "required": ["text"],
         "title": "RewriteRequest",
         "type": "object"
       },
@@ -654,11 +571,7 @@
             "$ref": "#/components/schemas/ResponseStatus"
           }
         },
-        "required": [
-          "status",
-          "message",
-          "choices"
-        ],
+        "required": ["status", "message", "choices"],
         "title": "RewriteResponse",
         "type": "object"
       },
@@ -679,11 +592,10 @@
           "openAccessPdf": {
             "type": "string"
           },
-          "paperId": {
+          "publicationDate": {
             "type": "string"
           },
-          "publicationDate": {
-            "format": "date-time",
+          "paperId": {
             "type": "string"
           },
           "title": {
@@ -714,11 +626,7 @@
             "$ref": "#/components/schemas/ResponseStatus"
           }
         },
-        "required": [
-          "status",
-          "message",
-          "results"
-        ],
+        "required": ["status", "message", "results"],
         "title": "SearchResponse",
         "type": "object"
       },
@@ -732,9 +640,7 @@
             "$ref": "#/components/schemas/ResponseStatus"
           }
         },
-        "required": [
-          "status"
-        ],
+        "required": ["status"],
         "title": "StatusResponse",
         "type": "object"
       },
@@ -747,10 +653,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "index",
-          "text"
-        ],
+        "required": ["index", "text"],
         "title": "TextCompletionChoice",
         "type": "object"
       },
@@ -778,9 +681,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "text"
-        ],
+        "required": ["text"],
         "title": "TextCompletionRequest",
         "type": "object"
       },
@@ -799,11 +700,7 @@
             "$ref": "#/components/schemas/ResponseStatus"
           }
         },
-        "required": [
-          "status",
-          "message",
-          "choices"
-        ],
+        "required": ["status", "message", "choices"],
         "title": "TextCompletionResponse",
         "type": "object"
       },
@@ -816,10 +713,7 @@
             "$ref": "#/components/schemas/ResponseStatus"
           }
         },
-        "required": [
-          "status",
-          "message"
-        ],
+        "required": ["status", "message"],
         "title": "UpdateStatusResponse",
         "type": "object"
       },
@@ -848,11 +742,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "loc",
-          "msg",
-          "type"
-        ],
+        "required": ["loc", "msg", "type"],
         "title": "ValidationError",
         "type": "object"
       }
@@ -900,9 +790,7 @@
           }
         },
         "summary": "Http Ai Completion",
-        "tags": [
-          "ai"
-        ]
+        "tags": ["ai"]
       }
     },
     "/api/ai/rewrite": {
@@ -941,9 +829,7 @@
           }
         },
         "summary": "Http Ai Rewrite",
-        "tags": [
-          "ai"
-        ]
+        "tags": ["ai"]
       }
     },
     "/api/ai/{project_id}/chat": {
@@ -993,9 +879,7 @@
           }
         },
         "summary": "Http Ai Chat",
-        "tags": [
-          "ai"
-        ]
+        "tags": ["ai"]
       }
     },
     "/api/ai/{project_id}/chat_stream": {
@@ -1100,9 +984,7 @@
           }
         },
         "summary": "Delete File",
-        "tags": [
-          "filesystem"
-        ]
+        "tags": ["filesystem"]
       },
       "get": {
         "operationId": "read_file_api_fs__project_id___filepath__get",
@@ -1148,9 +1030,7 @@
           }
         },
         "summary": "Read File",
-        "tags": [
-          "filesystem"
-        ]
+        "tags": ["filesystem"]
       },
       "head": {
         "operationId": "head_file_api_fs__project_id___filepath__head",
@@ -1196,9 +1076,7 @@
           }
         },
         "summary": "Head File",
-        "tags": [
-          "filesystem"
-        ]
+        "tags": ["filesystem"]
       },
       "put": {
         "operationId": "create_file_api_fs__project_id___filepath__put",
@@ -1256,9 +1134,7 @@
           }
         },
         "summary": "Create File",
-        "tags": [
-          "filesystem"
-        ]
+        "tags": ["filesystem"]
       }
     },
     "/api/meta/shutdown": {
@@ -1275,9 +1151,7 @@
           }
         },
         "summary": "Shutdown",
-        "tags": [
-          "meta"
-        ]
+        "tags": ["meta"]
       }
     },
     "/api/meta/status": {
@@ -1296,9 +1170,7 @@
           }
         },
         "summary": "Status",
-        "tags": [
-          "meta"
-        ]
+        "tags": ["meta"]
       }
     },
     "/api/projects/": {
@@ -1318,9 +1190,7 @@
           }
         },
         "summary": "List Projects",
-        "tags": [
-          "projects"
-        ]
+        "tags": ["projects"]
       },
       "post": {
         "description": "Creates a project, and a directory in the filesystem",
@@ -1358,9 +1228,7 @@
           }
         },
         "summary": "Create Project",
-        "tags": [
-          "projects"
-        ]
+        "tags": ["projects"]
       }
     },
     "/api/projects/{project_id}": {
@@ -1401,9 +1269,7 @@
           }
         },
         "summary": "Delete Project",
-        "tags": [
-          "projects"
-        ]
+        "tags": ["projects"]
       },
       "get": {
         "description": "Returns details about a project",
@@ -1442,9 +1308,7 @@
           }
         },
         "summary": "Get Project",
-        "tags": [
-          "projects"
-        ]
+        "tags": ["projects"]
       }
     },
     "/api/projects/{project_id}/files": {
@@ -1484,9 +1348,7 @@
           }
         },
         "summary": "Get Project Files",
-        "tags": [
-          "projects"
-        ]
+        "tags": ["projects"]
       }
     },
     "/api/references/{project_id}": {
@@ -1531,9 +1393,7 @@
           }
         },
         "summary": "List References",
-        "tags": [
-          "references"
-        ]
+        "tags": ["references"]
       },
       "post": {
         "description": "Creates references from a PDF directory or URL.",
@@ -1555,7 +1415,7 @@
               "schema": {
                 "anyOf": [
                   {
-                    "$ref": "#/components/schemas/IngestMetadataRequest"
+                    "$ref": "#/components/schemas/IngestPdfUrlRequest"
                   },
                   {
                     "$ref": "#/components/schemas/IngestUploadsRequest"
@@ -1590,9 +1450,7 @@
           }
         },
         "summary": "Ingest References",
-        "tags": [
-          "references"
-        ]
+        "tags": ["references"]
       }
     },
     "/api/references/{project_id}/bulk_delete": {
@@ -1642,9 +1500,7 @@
           }
         },
         "summary": "Http Bulk Delete",
-        "tags": [
-          "references"
-        ]
+        "tags": ["references"]
       }
     },
     "/api/references/{project_id}/{reference_id}": {
@@ -1693,9 +1549,7 @@
           }
         },
         "summary": "Http Delete",
-        "tags": [
-          "references"
-        ]
+        "tags": ["references"]
       },
       "get": {
         "operationId": "http_get_api_references__project_id___reference_id__get",
@@ -1742,9 +1596,7 @@
           }
         },
         "summary": "Http Get",
-        "tags": [
-          "references"
-        ]
+        "tags": ["references"]
       },
       "patch": {
         "operationId": "http_update_api_references__project_id___reference_id__patch",
@@ -1801,9 +1653,7 @@
           }
         },
         "summary": "Http Update",
-        "tags": [
-          "references"
-        ]
+        "tags": ["references"]
       }
     },
     "/api/search/s2": {
@@ -1853,9 +1703,7 @@
           }
         },
         "summary": "Http Search S2",
-        "tags": [
-          "search"
-        ]
+        "tags": ["search"]
       }
     },
     "/api/settings/": {
@@ -1874,9 +1722,7 @@
           }
         },
         "summary": "Get Settings",
-        "tags": [
-          "settings"
-        ]
+        "tags": ["settings"]
       },
       "put": {
         "operationId": "update_settings_api_settings__put",
@@ -1913,9 +1759,7 @@
           }
         },
         "summary": "Update Settings",
-        "tags": [
-          "settings"
-        ]
+        "tags": ["settings"]
       }
     }
   }
